INBOX-318 Fixed settings-overlay not visible on desktop.

--- a/modules/linagora.esn.unifiedinbox/frontend/css/modules/aside.less
+++ b/modules/linagora.esn.unifiedinbox/frontend/css/modules/aside.less
@@ -132,6 +132,7 @@
     }
 
     .settings-overlay {
+      display: block;
       font-size: @inboxAsideIconFontSize;
     }
 
